--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "scipy>=1.11.0",
     "plotly>=5.17.0",
+    "transformers>=4.57.1",
 ]
 
 [tool.uv]
